--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "moment-jalaali": "^0.10.4",
     "mongoose": "^9.0.2"
   },
   "devDependencies": {
